--- a/app/src/pages/common.css
+++ b/app/src/pages/common.css
@@ -1,14 +1,20 @@
 .container {
     display: flex;
     justify-content: center;
+    height: fit-content;
 }
 
 .table-container {
     width: 90vw !important;
     height: 80vh;
+    height: fit-content;
 }
 
 .table-dropdown {
     text-align: left;
     margin-bottom: 3vh;
+}
+
+footer {
+    margin: 3em;
 }
